about and works section added to homepage

--- a/styles/components/generalComponents/footer.module.scss
+++ b/styles/components/generalComponents/footer.module.scss
@@ -1,5 +1,5 @@
-@import '../vars.scss';
-@import '../mixins';
+@import '../../vars.scss';
+@import '../../mixins';
 
 .footer_container {
     background-color: $bg-color-2;
