--- a/styles/_extends.scss
+++ b/styles/_extends.scss
@@ -9,9 +9,11 @@
 
 %flex-rev {
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
     align-content: flex-end;
     flex-wrap: wrap;
+    gap: 0.5rem;
 }
 
 %navlink {
@@ -57,7 +59,7 @@
 }
 
 %line {
-    width: 400px;
+    width: 300px;
     height: 2px;
     border-radius: 2px;
     background-color: $txt-color-2;
