--- a/styles/components/generalComponents/navbar.module.scss
+++ b/styles/components/generalComponents/navbar.module.scss
@@ -2,6 +2,7 @@
 
 .navbar_nav {
     position: fixed;
+    top: 0;
     width: 100%;
     transition: all .3s ease;
     display: flex;
@@ -9,6 +10,7 @@
     align-items: center;
     background: $nav-bg-color;
     padding: 0.5% 10%;
+    z-index: 3;
     .logo {
         width: 100%;
     }
