styles and animation for main slider

--- a/styles/components/generalComponents/slider.module.scss
+++ b/styles/components/generalComponents/slider.module.scss
@@ -1,28 +1,22 @@
-@keyframes autoplay2 {
-    0% {top: 100%}
-    4% {top: 0%}
-    33.33% {top: 0%}
-    37.33% {top: -100%}
-    100% {top: -100%}
-}
-.slider_container {
-    #slider_carousel {
-        position: relative;
-        overflow: hidden;
-        .slider_one .slider_two .slider_three {
-            position: absolute; 
-            top: 100%; 
-            left: 0;
-            animation: 12s autoplay2 infinite ease-in-out;
-        }
-        .slider_one {
-            animation-delay: 0s;
-        }
-        .slider_two {
-            animation-delay: 4s;
-        }
-        .slider_three {
-            animation-delay: 8s;
-        }
+.carousel {
+    overflow: hidden;
+    position: relative;
+    .inner_carousel {
+        display: flex;
+        min-width: 300%
     }
+}
+
+.prev_button {
+    position: absolute;
+    top: 50%;
+    left: 2rem;
+    transform: translateY(-50%);
+}
+
+.next_button {
+    position: absolute;
+    top: 50%;
+    right: 2rem;
+    transform: translateY(-50%);
 }
