--- a/styles/components/works.module.scss
+++ b/styles/components/works.module.scss
@@ -32,7 +32,7 @@
         flex-wrap: wrap;
         position: relative;
         .workItem_container {
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
             width: 25%;
             position: relative;
@@ -50,16 +50,21 @@
                     background-color: transparent;
                     box-shadow: none;
                 }
-                &:hover img {
+                &:hover .imageItem {
                     transform: scale(1.4);
                     transition: all 1s;
                     z-index: 1;
                 }
-                img {
-                    width: 100%;
+                &:hover .text {
+                    opacity: 1;
+                    cursor: pointer;
+                    transition: all 800ms;
+                    z-index: 2;
                 }
+                
                 .text {
                     position: absolute;
+                    font-family: 'Inter';
                     width: 100%;
                     height: 100%;
                     opacity: 0;
@@ -67,14 +72,10 @@
                     background: rgba(0, 0, 0, 0.8);
                     padding-top: 40%;
                     color: $txt-color;
-                    &:hover {
-                        opacity: 1;
-                        cursor: pointer;
-                        transition: all 800ms;
-                        z-index: 2;
-                    }
+                    
                     h2 {
                         font-size: 2rem;
+                        font-weight: 400;
                     }
                     p {
                         font-size: $p;
