--- a/styles/components/pages/works/forest.module.scss
+++ b/styles/components/pages/works/forest.module.scss
@@ -1,3 +1,10 @@
 .main_container {
     height: 100vh;
+    .forest_container {
+        margin: 0% 18% 6% 18%;
+        // .image_container {
+        //     position: relative;
+        //     width: 100%;
+        // }
+    }
 }
