--- a/styles/components/pages/works/forest.module.scss
+++ b/styles/components/pages/works/forest.module.scss
@@ -1,10 +1,33 @@
 .main_container {
     height: 100vh;
+    .topimage_container {
+        display: "block";
+        position: "relative";
+    }
     .forest_container {
         margin: 0% 18% 6% 18%;
-        // .image_container {
-        //     position: relative;
-        //     width: 100%;
-        // }
+        .images_detail {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 0.5rem;
+            margin: 0.5rem 0 0.5rem 0;
+        }
+        .iframe_container {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            padding-top: 56.25%;
+            margin-top: 0.5rem;
+            .responsive_iframe {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
     }
 }
