--- a/styles/components/pages/works/utah.module.scss
+++ b/styles/components/pages/works/utah.module.scss
@@ -1,3 +1,19 @@
 .main_container {
     height: 100vh;
+    .topimage_container {
+        display: "block";
+        position: "relative";
+    }
+    .utah_container {
+        margin: 0% 18% 6% 18%;
+        .images_detail {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 0.5rem;
+            margin: 0.5rem 0 0.5rem 0;
+        }
+        .gif {
+             margin: 0.5rem 0 0.5rem 0;
+        }
+    }
 }
