--- a/styles/components/contact.module.scss
+++ b/styles/components/contact.module.scss
@@ -4,7 +4,7 @@
 
 .contact_container {
     @include grid-2 (10% 18%);
-    .contact-item {
+    .contact_item {
         text-align: left;
     }
     .item_form {
@@ -21,6 +21,10 @@
     color: $txt-color;
     padding-top: 1.5rem;
     margin-bottom: 2rem;
+}
+.p_text_mail {
+    width: fit-content;
+    margin:0px;
 }
 
 .line {
